// Vitest Snapshot v1

exports[`fakeController > compiler will create fake class 1`] = `
"
        export class Controller1{
            
    add(arg0,arg1,arg2,arg3){
const ret={tag:\\"1-add\\",body:{},query:{},params:{},realParam:'',method:\\"post\\",url:\\"/a\\"}
ret.query.a=arg0
ret.body.b=arg1
ret.params.c=arg2
ret.realParam+='/'+arg2
ret.params.d=arg3
ret.realParam+='/'+arg3

return ret
    }
    
            }
        export class Controller2{
            
    add(arg0,arg1){
const ret={tag:\\"2-add\\",body:{},query:{},params:{},realParam:'',method:\\"post\\",url:\\"/a\\"}
ret.query.a=arg0
ret.body.b=arg1

return ret
    }
    
            }"
`;

exports[`fakeController > when key doesn' exist 1`] = `
"
        export class Controller1{
            
    add(arg0,arg1,arg2,arg3){
const ret={tag:\\"1-add\\",body:{},query:{},params:{},realParam:'',method:\\"post\\",url:\\"/a\\"}
ret.query.a=arg0
ret.body=arg1
ret.params.c=arg2
ret.realParam+='/'+arg2
ret.params.d=arg3
ret.realParam+='/'+arg3

return ret
    }
    
            }"
`;
